--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>CSS 연결하기</title>
+    <title>로그인 페이지</title>
   </head>
   <body>
-    <p>새로운 내용을 써 봤습니다.</p>
+    <div class="container">
+      <div class="header">
+        <h2 class="title">코코넛톡</h2>
+      </div>
+      <div class="main">
+        <form class="form" action="chat.html">
+          <input type="text" placeholder="ID" />
+          <input type="password" placeholder="PW" />
+          <input type="submit" value="로그인" />
+        </form>
+        <a href="chat.html">채팅 페이지로 이동</a>
+      </div>
+    </div>
   </body>
 </html>
