1-6 메신저 웹사이트 코딩 준비하기

--- a/src/friends.html
+++ b/src/friends.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>코코넛톡 - 로그인</title>
+  <title>코코넛톡 - 친구 목록</title>
   <link href="./css/pages/common.css" rel="stylesheet">
-  <link href="./css/pages/index.css" rel="stylesheet">
+  <link href="./css/pages/friends.css" rel="stylesheet">
+  <link href="./css/components/navbar.css" rel="stylesheet">
+  <link href="./css/components/header.css" rel="stylesheet">
+  <link href="./css/components/userlist.css" rel="stylesheet">
   <link href="./img/coconut.png" rel="icon">
 </head>
 <body>
