--- a/src/chat.html
+++ b/src/chat.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>채팅 페이지</title>
-  </head>
-  <body>
-    아무 내용 없음
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>코코넛톡 - 채팅</title>
+  <link href="./css/pages/common.css" rel="stylesheet">
+  <link href="./css/pages/chat.css" rel="stylesheet">
+  <link href="./css/components/userlist.css" rel="stylesheet">
+  <link href="./img/coconut.png" rel="icon">
+</head>
+<body>
+  
+</body>
 </html>
