3-2 목록 만들기 (1)

--- a/src/chats.html
+++ b/src/chats.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>코코넛톡 - 채팅 목록</title>
     <link href="./css/pages/common.css" rel="stylesheet" />
-    <link href="./css/pages/chats.css" rel="stylesheet" />
+    <link href="./css/pages/friends.css" rel="stylesheet" />
     <link href="./css/components/navbar.css" rel="stylesheet" />
     <link href="./css/components/header.css" rel="stylesheet" />
     <link href="./css/components/userlist.css" rel="stylesheet" />
     <link href="./img/coconut.png" rel="icon" />
+    <script src="https://kit.fontawesome.com/**********.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="nav">
@@ -21,7 +22,7 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a href="chats.html">
+          <a href="chats.html" class="active">
             <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
@@ -29,7 +30,7 @@
     </div>
     <div class="container">
       <div class="header">
-        <h3 class="header__title">친구</h3>
+        <h3 class="header__title">채팅</h3>
         <div class="header__menu">
           <span><i class="fas fa-search"></i></span>
           &nbsp;
