--- a/src/friends.html
+++ b/src/friends.html
@@ -11,13 +11,13 @@
     <link href="./css/components/header.css" rel="stylesheet" />
     <link href="./css/components/userlist.css" rel="stylesheet" />
     <link href="./img/coconut.png" rel="icon" />
-    <script src="https://kit.fontawesome.com/0bf69a5d75.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/**********.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a href="friends.html">
+          <a href="friends.html" class="active">
             <i class="fas fa-user fa-2x"></i>
           </a>
         </li>
