3-4 내 프로필과 친구 프로필 표시하기

--- a/src/friends.html
+++ b/src/friends.html
@@ -38,7 +38,46 @@
         </div>
       </div>
       <div class="main">
+        <div class="user my-profile">
+          <div class="user__column">
+            <div class="user__pic"></div>
+          </div>
+          <div class="user__column">
+            <p class="user__nick">문파랑</p>
+            <p class="user__state">이것은 나의 프로필</p>
+          </div>
+        </div>
+        <div class="friends__menu">
+          <span class="friends__menu__header">친구 4</span>
+        </div>
         <div class="user-list">
+          <div class="user">
+            <div class="user__column">
+              <div class="user__pic"></div>
+            </div>
+            <div class="user__column">
+              <p class="user__nick">친구 또는 채팅방 이름</p>
+              <p class="user__state">메시지 또는 상태</p>
+            </div>
+          </div>
+          <div class="user">
+            <div class="user__column">
+              <div class="user__pic"></div>
+            </div>
+            <div class="user__column">
+              <p class="user__nick">친구 또는 채팅방 이름</p>
+              <p class="user__state">메시지 또는 상태</p>
+            </div>
+          </div>
+          <div class="user">
+            <div class="user__column">
+              <div class="user__pic"></div>
+            </div>
+            <div class="user__column">
+              <p class="user__nick">친구 또는 채팅방 이름</p>
+              <p class="user__state">메시지 또는 상태</p>
+            </div>
+          </div>
           <div class="user">
             <div class="user__column">
               <div class="user__pic"></div>
