3-5 채팅 미리보기 만들기

--- a/src/chats.html
+++ b/src/chats.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>코코넛톡 - 채팅 목록</title>
     <link href="./css/pages/common.css" rel="stylesheet" />
-    <link href="./css/pages/friends.css" rel="stylesheet" />
+    <link href="./css/pages/chats.css" rel="stylesheet" />
     <link href="./css/components/navbar.css" rel="stylesheet" />
     <link href="./css/components/header.css" rel="stylesheet" />
     <link href="./css/components/userlist.css" rel="stylesheet" />
@@ -39,15 +39,54 @@
       </div>
       <div class="main">
         <div class="user-list">
-          <div class="user">
-            <div class="user__column">
-              <div class="user__pic"></div>
+          <a href="chat.html">
+            <div class="user">
+              <div class="user__column">
+                <div class="user__pic"></div>
+              </div>
+              <div class="user__column">
+                <p class="user__nick">채팅방</p>
+                <p class="user__state">안녕 이건 마지막 메시지야</p>
+                <p class="user__time">14:00</p>
+              </div>
             </div>
-            <div class="user__column">
-              <p class="user__nick">친구 또는 채팅방 이름</p>
-              <p class="user__state">메시지 또는 상태</p>
+          </a>
+          <a href="chat.html">
+            <div class="user">
+              <div class="user__column">
+                <div class="user__pic"></div>
+              </div>
+              <div class="user__column">
+                <p class="user__nick">채팅방</p>
+                <p class="user__state">안녕 이건 마지막 메시지야</p>
+                <p class="user__time">14:00</p>
+              </div>
             </div>
-          </div>
+          </a>
+          <a href="chat.html">
+            <div class="user">
+              <div class="user__column">
+                <div class="user__pic"></div>
+              </div>
+              <div class="user__column">
+                <p class="user__nick">채팅방</p>
+                <p class="user__state">안녕 이건 마지막 메시지야</p>
+                <p class="user__time">14:00</p>
+              </div>
+            </div>
+          </a>
+          <a href="chat.html">
+            <div class="user">
+              <div class="user__column">
+                <div class="user__pic"></div>
+              </div>
+              <div class="user__column">
+                <p class="user__nick">채팅방</p>
+                <p class="user__state">안녕 이건 마지막 메시지야</p>
+                <p class="user__time">14:00</p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
