--- a/src/chat.html
+++ b/src/chat.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>코코넛톡 - 채팅</title>
-  <link href="./css/pages/common.css" rel="stylesheet">
-  <link href="./css/pages/chat.css" rel="stylesheet">
-  <link href="./css/components/userlist.css" rel="stylesheet">
-  <link href="./img/coconut.png" rel="icon">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>코코넛톡 - 채팅</title>
+    <link href="./css/pages/common.css" rel="stylesheet" />
+    <link href="./css/pages/chat.css" rel="stylesheet" />
+    <link href="./css/components/userlist.css" rel="stylesheet" />
+    <link href="./img/coconut.png" rel="icon" />
+    <script src="https://kit.fontawesome.com/0bf69a5d75.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="chat-screen">
+        <div class="chat-screen__bar"></div>
+        <ul class="chat-screen__comments">
+          <li class="comment">내용은 아무거나</li>
+          <li class="comment">내용은 아무거나</li>
+        </ul>
+      </div>
+      <form onsubmit="return false;" class="chat-form">
+        <div class="chat-form__plugin">
+          <i class="far fa-smile chat-form__icon"></i>
+          <i class="fas fa-paperclip chat-form__icon"></i>
+          <i class="far fa-calendar-check chat-form__icon"></i>
+        </div>
+        <div class="chat-form__field">
+          <textarea class="chat-form__msg"></textarea>
+          <input type="submit" class="chat-form__bt" value="전송" />
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
