4-2 채팅방 상태 바 만들기

--- a/src/chat.html
+++ b/src/chat.html
@@ -9,12 +9,22 @@
     <link href="./css/pages/chat.css" rel="stylesheet" />
     <link href="./css/components/userlist.css" rel="stylesheet" />
     <link href="./img/coconut.png" rel="icon" />
-    <script src="https://kit.fontawesome.com/0bf69a5d75.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/**********.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <div class="chat-screen">
-        <div class="chat-screen__bar"></div>
+        <div class="chat-screen__bar">
+          <div class="user chat-user">
+            <div class="user__column">
+              <div class="user__pic"></div>
+            </div>
+            <div class="user__column">
+              <p class="user__nick">친구명</p>
+              <p class="user__state"><i class="fas fa-user"></i> 2</p>
+            </div>
+          </div>
+        </div>
         <ul class="chat-screen__comments">
           <li class="comment">내용은 아무거나</li>
           <li class="comment">내용은 아무거나</li>
