4-4 말풍선 만들기

--- a/src/chat.html
+++ b/src/chat.html
@@ -28,6 +28,7 @@
         <ul class="chat-screen__comments">
           <li class="comment">내용은 아무거나</li>
           <li class="comment">내용은 아무거나</li>
+          <li class="comment">내용은 아무거나</li>
         </ul>
       </div>
       <form onsubmit="return false;" class="chat-form">
